[package]
name = "stm32l432-usb"
version = "0.1.0"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"

[dependencies]
bare-metal = "0.2.3"
cortex-m = "0.5.8"
stm32l4 = { path = "../stm32-rs/stm32l4", features = ["stm32l4x2", "rt"] }
# TODO: this commit is used temporarily to be able to set USB clocks correctly in the examples
stm32l4-hal = { path = "../stm32l4-hal", features = ["stm32l4x2", "unproven", "rt"] }
vcell = "0.1.0"
usb-device = { git = "https://github.com/mvirkkunen/usb-device", rev = "6b606d394bdebf33de8866a4a21c3aa41e32c010" }

[dev-dependencies]
cortex-m-rt = "0.6.5"
panic-semihosting = "0.5.1"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
# opt-level = "z"

